f3s/anki-sync-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: anki-sync-server
  name: anki-sync-server-service
  namespace: services
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: anki-sync-server
